fixed the spacing in the navbar

--- a/assets/stylus/app.styl
+++ b/assets/stylus/app.styl
@@ -1045,6 +1045,8 @@ svg
                 align-items: center
                 li
                     margin: 0 30px
+                    &:last-child
+                        margin: 0 0 0 30px
                     .nav_item
                         position: relative
                         brandon_bold(16px, true)
